      information about the host system.
  * checks/md5sums:
    + [NT] Fix path traversal issue that could leak information
      about the host system.
  * checks/menus:
    + [NT] Fix path traversal issue that could leak information
      about the host system.
  * checks/shared-libs:
    + [NT] Fix path traversal issue that could leak information
      about the host system.

 -- Niels Thykier <niels@thykier.net>  Fri, 05 Apr 2013 17:15:00 +0200

lintian (2.5.10.4) unstable; urgency=low

  * checks/init.d:
    + [NT] Fix regression where Lintian would not properly match
      init.d passed to update-rc.d.  Thanks to Michael Meskes for
      reporting.  (Closes: #698602)

  * lib/Lintian/Collect/Package.pm:
    + [NT] Ensure the "root" entry of indices do not contain itself.
      (Closes: #695866)
  * lib/Lintian/Util.pm:
    + [NT] Reject partially signed Deb822 files.  Most Deb822 files
      are not signed at all; but those that are should be completely
      covered by a signature.  (Closes: #696230)
    + [ADB] Fix a typo in the matching of expected delimiters for some
      signed messages; thanks Samuel Bronson.

 -- Niels Thykier <niels@thykier.net>  Sat, 16 Feb 2013 14:17:03 +0100

lintian (2.5.10.3) unstable; urgency=low

  * checks/scripts{,.desc}:
    + [NT] Fix false-positive for removal of device files as /dev/shm
      is not a device.  Thanks to Steve Langasek for the report and
      Roger Leigh for the extra info.  (Closes: #693442)
  * checks/standards-version:
    + [NT] Recognise Standards-Version 3.9.4.
    + [NT] Accept Standards-Version 3.9.3 as current (enough) during
      the freeze.

 -- Niels Thykier <niels@thykier.net>  Tue, 11 Dec 2012 20:14:06 +0100

lintian (2.5.10.2) unstable; urgency=low

  * checks/po-debconf:
    + [NT] Fix dirhandle leak.
  * checks/source-copyright{,.desc}:
    + [NT] Report the correct line number for the use of commas in
      the "Files" field in DEP-5 copyright files.  Thanks to Faheem